# fathom

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  start.bat
alembic/: env.py
alembic/versions/: 221a91b987d0_initial_schema.py  c0962a77e45b_initial_schema.py  d7e6201ea915_add_sector_cache_and_model_fixes.py
scripts/: backfill_capitol_trades.py  backfill_edgar.py  canonicalize_sectors.py
src/fathom/: config.py  database.py  main.py
src/fathom/api/: admin.py  congressional.py  signals.py
src/fathom/engine/: correlator.py  explainers.py  normalization.py  pipeline.py  scorer.py
src/fathom/models/: __init__.py  committee_membership.py  congressional_trade.py  dividend_event.py  etf_flow.py  event_tag.py  insider_trade.py  legislation.py  sector_cache.py  signal.py  signal_performance.py  stock_price.py
src/fathom/scheduler/: jobs.py
src/fathom/scrapers/: base.py  capitol_trades.py  committees.py  edgar.py  legislation.py  stock_prices.py
src/fathom/static/: charts.js  style.css
src/fathom/templates/: admin.html  (+6 more)
tests/: conftest.py  test_database.py
tests/test_api/: test_admin.py  test_congressional.py  test_signals.py  test_signals_feed.py
tests/test_engine/: test_congressional_pipeline.py  test_correlator.py  test_normalization.py  test_pipeline.py  test_pipeline_correlation.py  test_scorer.py  test_sector_cache.py
tests/test_scheduler/: test_jobs.py
tests/test_scrapers/: conftest.py  test_capitol_trades.py  test_committees.py  test_edgar.py  test_legislation.py  test_stock_prices.py
tests/test_scripts/: test_backfill.py
(+3 files in other folders)
